@@ -1,3 +1,7 @@
+2004-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:  Cleanup the taskbar icon on application exit.
+
 2004-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Support 'tile' themeing now. There are a couple of
